# straws

./: Cargo.toml  LICENSE  README.md  build.rs
.claude/: settings.local.json
src/: config.rs  error.rs  lib.rs  logger.rs  main.rs
src/agent/: mod.rs  pool.rs  protocol.rs  python.rs
src/auth/: key.rs  mod.rs  password.rs
src/file/: finalize.rs  metadata.rs  mod.rs  sparse.rs
src/job/: mod.rs  queue.rs  scheduler.rs  types.rs
src/progress/: display.rs  mod.rs  speed.rs  tracker.rs
src/transfer/: download.rs  io.rs  mod.rs  upload.rs
tests/: test_audit.py  test_straws.py
