[package]
name = "straws"
version = "0.1.0"
edition = "2021"
description = "High-performance SSH file transfer tool with bidirectional support"
authors = ["Joe Drago <jdrago@gmail.com>"]
license = "BSD-2-Clause"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
byteorder = "1"
md-5 = "0.10"
thiserror = "2"
anyhow = "1"
bytes = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
